--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -6,3 +6,14 @@
   volume  = 1,
   number  = 1
 }
+
+@article{morales2009scenario,
+  title={Scenario reduction for futures market trading in electricity markets},
+  author={Morales, Juan M and Pineda, Salvador and Conejo, Antonio J and Carrion, Miguel},
+  journal={IEEE Transactions on Power Systems},
+  volume={24},
+  number={2},
+  pages={878--888},
+  year={2009},
+  publisher={IEEE}
+}
